--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5"
   }
